# safie-api-sample-code

./: LICENSE  README.md  get_image.py
authorization-api-key/: CMakeLists.txt  README.md  list-devices.cpp  list_devices.py  pyproject.toml
authorization-oauth2/: CMakeLists.txt  README.md  authorization_oauth2.py  list-devices.cpp  list_devices.py  pyproject.toml
get-image-set-flag/: CMakeLists.txt  README.md  get-image-set-flag.cpp  get_image_set_flag.py  pyproject.toml
mediafile-download/: CMakeLists.txt  README.md  mediafile-download.cpp  mediafile_download.py  pyproject.toml
streaming-download/: CMakeLists.txt  README.md  pyproject.toml  streaming-download.cpp  streaming-download.py
