[tool.poetry]
name = "streaming-download-sample"
version = "0.1.0"
description = ""
authors = ["Safie <developers_support@safie.jp>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
av = "^10.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
